images size on safari correction try 1

--- a/rendered/css/buitengewoon.css
+++ b/rendered/css/buitengewoon.css
@@ -193,6 +193,7 @@ p {
 
 .fill {
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
     align-items: center;
     overflow: hidden
